login and register

--- a/src/app/footer-navbar/footer-navbar.component.html
+++ b/src/app/footer-navbar/footer-navbar.component.html
@@ -1,1 +1,8 @@
-<p>footer-navbar works!</p>
+<div class="footer-navbar">
+    <button mat-button routerLink="/signup">
+      <mat-icon class="icon">account_box</mat-icon>
+    </button>
+    <button mat-button routerLink="/login">
+      <mat-icon class="icon">calendar_today</mat-icon>
+    </button>
+  </div>
